--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,11 +1,11 @@
 name: GitHub CI
 
 on:
-  pull_request:
-  push:
+  # pull_request:
+  # push:
   workflow_dispatch:
-  schedule:
-    - cron: 0 0 * * 0
+  # schedule:
+  #   - cron: 0 0 * * 0
 
 defaults:
   run:
