--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -2,6 +2,11 @@ name: Docker Build
 
 on:
   workflow_dispatch:
+    inputs:
+      push:
+        type: boolean
+        default: false
+        description: Push the images after build
   schedule:
     - cron: 0 20 * * *
 
@@ -135,6 +140,7 @@ jobs:
           password: ${{ github.token }}
 
       - name: Create manifest list and push
+        if: github.event_name == 'schedule' || inputs.push == true
         working-directory: /tmp/digests
         run: |
           docker buildx imagetools create $(jq -cr '.tags | map("-t " + .) | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON") \
