Upload images regardless of previous job status
Don't _not_ upload just because a single one failed

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -106,6 +106,8 @@ jobs:
     needs:
       - build
       - set-up-matrix
+    if: success() || failure()
+
     strategy:
       fail-fast: false
       matrix:
