--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -39,6 +39,14 @@ jobs:
       - id: fetch-matrix
         run: echo "images=$(./images.rb)" >> "$GITHUB_OUTPUT"
 
+      - name: Download source
+        run: curl -o ruby.tar.xz https://cache.ruby-lang.org/pub/ruby/snapshot/snapshot-master.tar.xz
+      - uses: actions/upload-artifact@v4
+        with:
+          name: snapshot-master
+          path: ruby.tar.xz
+          retention-days: 1
+
   build:
     needs: set-up-matrix
     runs-on: ubuntu-latest
@@ -73,6 +81,11 @@ jobs:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ github.token }}
+
+      - uses: actions/download-artifact@v4
+        with:
+          name: snapshot-master
+          path: ./master/${{ matrix.image.variant }}
 
       - name: Build and push by digest
         id: build
@@ -165,6 +178,10 @@ jobs:
 
           See more at https://github.com/docker-ruby-nightly/ruby/pkgs/container/ruby/versions?filters[version_type]=tagged
           EOT
+      
+      - uses: actions/download-artifact@v4
+        with:
+          name: snapshot-master
 
       - id: latest-release
         env:
@@ -176,4 +193,4 @@ jobs:
         if: (github.event_name == 'schedule' || inputs.push == true) && steps.latest-release.outputs.latest_release != needs.set-up-matrix.outputs.date
         env:
           GH_TOKEN: ${{ github.token }}
-        run: gh release create ${{ needs.set-up-matrix.outputs.date }} --title="${{ needs.set-up-matrix.outputs.date }}" --notes-file=notes.txt
+        run: gh release create ${{ needs.set-up-matrix.outputs.date }} ruby.tar.xz --title="${{ needs.set-up-matrix.outputs.date }}" --notes-file=notes.txt
