--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -20,7 +20,7 @@ env:
 jobs:
   set-up-matrix:
     name: Set up matrix
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     outputs:
       date: ${{ steps.fetch-date.outputs.date }}
       images: ${{ steps.fetch-matrix.outputs.images }}
@@ -55,7 +55,7 @@ jobs:
 
   build:
     needs: set-up-matrix
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     strategy:
       fail-fast: false
       matrix:
@@ -136,7 +136,7 @@ jobs:
           retention-days: 1
 
   merge:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     needs:
       - build
       - set-up-matrix
@@ -183,7 +183,7 @@ jobs:
             $(printf '${{ env.REGISTRY_IMAGE }}@sha256:%s ' *)
 
   release:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     needs:
       - set-up-matrix
       - build
