Revert "Fix adding git for non-slim debian variants"
This reverts commit 6981fd09cbbb6d125a74119179605e622026f1e6.

--- a/Dockerfile.template.patch
+++ b/Dockerfile.template.patch
@@ -1,5 +1,5 @@
 diff --git a/Dockerfile.template b/Dockerfile.template
-index 4a3fc4a..515b104 100644
+index 4a3fc4a..27e39b9 100644
 --- a/Dockerfile.template
 +++ b/Dockerfile.template
 @@ -36,7 +36,8 @@ ENV RUBY_DOWNLOAD_SHA256 {{ .sha256.xz }}
@@ -20,14 +20,14 @@ index 4a3fc4a..515b104 100644
  		gdbm-dev \
  		glib-dev \
  		gmp-dev \
-@@ -88,6 +90,7 @@ RUN set -eux; \
- 		dpkg-dev \
- 		libgdbm-dev \
- 		ruby \
-+		git \
- {{ if is_slim then ( -}}
- 		autoconf \
+@@ -93,6 +95,7 @@ RUN set -eux; \
  		bzip2 \
+ 		g++ \
+ 		gcc \
++		git \
+ 		libbz2-dev \
+ 		libffi-dev \
+ 		libgdbm-compat-dev \
 @@ -183,12 +186,10 @@ RUN set -eux; \
  	fi; \
  {{ ) else "" end -}}
