--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -152,7 +152,7 @@ jobs:
       - name: Download digests
         uses: actions/download-artifact@v4
         with:
-          path: /tmp/digests
+          path: digests
           pattern: digests-${{ matrix.variant }}-*
           merge-multiple: true
       
@@ -176,8 +176,8 @@ jobs:
           password: ${{ github.token }}
 
       - name: Create manifest list and push
-        if: github.event_name == 'schedule' || inputs.push == true
-        working-directory: /tmp/digests
+        if: (github.event_name == 'schedule' || inputs.push == true) && ${{ hashFiles('digests/') != '' }}
+        working-directory: digests
         run: |
           docker buildx imagetools create $(jq -cr '.tags | map("-t " + .) | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON") \
             $(printf '${{ env.REGISTRY_IMAGE }}@sha256:%s ' *)
