--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -152,9 +152,12 @@ jobs:
       - name: Download digests
         uses: actions/download-artifact@v4
         with:
-          path: digests
+          path: /tmp/digests
           pattern: digests-${{ matrix.variant }}-*
           merge-multiple: true
+
+      - name: Create folder if not exists
+        run: mkdir -p /tmp/digests
       
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -176,8 +179,8 @@ jobs:
           password: ${{ github.token }}
 
       - name: Create manifest list and push
-        if: (github.event_name == 'schedule' || inputs.push == true) && ${{ hashFiles('digests/') != '' }}
-        working-directory: digests
+        if: github.event_name == 'schedule' || inputs.push == true
+        working-directory: /tmp/digests
         run: |
           docker buildx imagetools create $(jq -cr '.tags | map("-t " + .) | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON") \
             $(printf '${{ env.REGISTRY_IMAGE }}@sha256:%s ' *)
