--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -31,6 +31,8 @@ jobs:
       - uses: actions/checkout@v6
         with:
           submodules: true
+      - run: cd docker-ruby && ./rust.sh
+      - run: cd docker-ruby && ./versions.sh
       - name: Download source
         run: curl -o ruby.tar.xz https://cache.ruby-lang.org/pub/ruby/snapshot/snapshot-master.tar.xz
       - uses: actions/upload-artifact@v5
